Fix testing levels with SmartEnemies